Changes to make the module production ready

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -4,6 +4,8 @@ depends:
     ir
     project_plan
     project_phase
+    #Required for configuration only
+    project_sequence
 xml:
     role.xml
     work.xml
