Change dependency from project_plan to project_allocation

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -2,7 +2,7 @@
 version=5.5.0
 depends:
     ir
-    project_plan
+    project_allocation
     project_phase
     #Required for configuration only
     project_sequence
